--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <h2>CHOOSE YOUR BOOZE</h2>
        
 
-            <section class="userChoice">
-            <div class="button button1">
+            <section class="userChoice" id="userChoice">
+            <div class="button button1" id='gin' value='1'>
                 <p>Gin</p>
             </div>
-            <div class="button button2">
+            <div class="button button2" id='rum' value='2'>
                 <p>Rum</p>
             </div>
-            <div class="button button3">
+            <div class="button button3" id= 'tequila' value=3>
                 <p>Tequila</p>
             </div>
-            <div class="button button4">
+            <div class="button button4" id='whiskey' value=4>
                 <p>Whiskey</p>
             </div>
-            <div class="button button5">
+            <div class="button button5" id='vodka' value=5>
                 <p>Vodka</p>
             </div>
-            <div class="button button6">
+            <div class="button button6" id='brandy' value=6>
                 <p>Brandy</p>
             </div>
         </section>
