sass partials added- mediaQueries added :sparkles:

--- a/index.html
+++ b/index.html
@@ -9,48 +9,61 @@
     <title>Cocktail Time!</title>
 </head>
 <body>
+    <!-- header starts -->
     <header>
         <div class="wrapper">
             <h1>What should I drink tonight?</h1>
-            <h2>CHOOSE YOUR BOOZE</h2>
-       
-
+            <h2>Choose your booze</h2>
+        
+            <!-- section User Choice starts-->
             <section class="userChoice" id="userChoice">
-            <div class="button button1" id='gin' value='1'>
-                <p>Gin</p>
-            </div>
-            <div class="button button2" id='rum' value='2'>
-                <p>Rum</p>
-            </div>
-            <div class="button button3" id= 'tequila' value=3>
-                <p>Tequila</p>
-            </div>
-            <div class="button button4" id='whiskey' value=4>
-                <p>Whiskey</p>
-            </div>
-            <div class="button button5" id='vodka' value=5>
-                <p>Vodka</p>
-            </div> 
-            <div class="button button6" id='brandy' value=6>
-                <p>Brandy</p>
-            </div>
-        </section>
+                <div class="button button1" id='Gin' value='1'>
+                    <p>Gin</p>
+                </div>
+                <div class="button button2" id='Rum' value='2'>
+                    <p>Rum</p>
+                </div>
+                <div class="button button3" id= 'tequila' value=3>
+                    <p>Tequila</p>
+                </div>
+                <div class="button button4" id='whiskey' value=4>
+                    <p>Whiskey</p>
+                </div>
+                <div class="button button5" id='vodka' value=5>
+                    <p>Vodka</p>
+                </div> 
+                <div class="button button6" id='brandy' value=6>
+                    <p>Brandy</p>
+                </div>
+            </section>
+            <!-- section User Choice ends -->
+        </div>
     </header>
+    <!-- header ends -->
 
-    <div class="wrapper">
-        <section class="showHere">
+    <!-- main starts -->
+    <main>
+        <div class="wrapper">
+            <section class="showHere">
 
-        </section>
-    </div>
-   
-        <script
-        src='https://code.jquery.com/jquery-3.2.1.min.js'
-        integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' 
-        crossorigin='anonymous'>
-    </script>
+            </section>
+        </div>
+    </main>
+    <!-- main ends -->
 
-        <script src="script.js"></script>
+
+    <!-- footer starts -->
+    <footer>
+        <p>© Created by Aymen Mahmod & Maria Lujan Vinas 2020</p>
+    </footer>
+    <!-- footer ends -->
+
+
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+
+    <script src="script.js"></script>
 
 
 </body>
+
 </html>
