js/scss display changes

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         
             <!-- section User Choice starts-->
             <section class="userChoice" id="userChoice">
-                <div class="button button1" id='Gin' value='1'>
+                <div class="button button1" id='Gin'>
                     <p>Gin</p>
                 </div>
-                <div class="button button2" id='Rum' value='2'>
+                <div class="button button2" id='Rum'>
                     <p>Rum</p>
                 </div>
-                <div class="button button3" id= 'tequila' value=3>
+                <div class="button button3" id= 'tequila'>
                     <p>Tequila</p>
                 </div>
-                <div class="button button4" id='whiskey' value=4>
+                <div class="button button4" id='whiskey'>
                     <p>Whiskey</p>
                 </div>
-                <div class="button button5" id='vodka' value=5>
+                <div class="button button5" id='vodka'>
                     <p>Vodka</p>
                 </div> 
-                <div class="button button6" id='brandy' value=6>
+                <div class="button button6" id='brandy'>
                     <p>Brandy</p>
                 </div>
             </section>
