making it responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
             <!-- section User Choice starts-->
             <section class="userChoice" id="userChoice">
-                <div class="button button1" id='Gin'>
+                <div class="button button1q" id='Gin'>
                     <p>Gin</p>
                 </div>
                 <div class="button button2" id='Rum'>
