--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         
             <!-- section User Choice starts-->
             <section class="userChoice" id="userChoice">
-                <div class="button button1q" id='Gin'>
+                <div class="button button1" tabindex="1" id='Gin'>
                     <p>Gin</p>
                 </div>
-                <div class="button button2" id='Rum'>
+                <div class="button button2" tabindex="1" id='Rum'>
                     <p>Rum</p>
                 </div>
-                <div class="button button3" id= 'tequila'>
+                <div class="button button3" tabindex="1" id= 'tequila'>
                     <p>Tequila</p>
                 </div>
-                <div class="button button4" id='whiskey'>
+                <div class="button button4" tabindex="1" id='whiskey'>
                     <p>Whiskey</p>
                 </div>
-                <div class="button button5" id='vodka'>
+                <div class="button button5" tabindex="1" id='vodka'>
                     <p>Vodka</p>
                 </div> 
-                <div class="button button6" id='brandy'>
+                <div class="button button6" tabindex="1" id='brandy'>
                     <p>Brandy</p>
                 </div>
             </section>
